Lab3_t/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> prog line es
Rule 2     prog -> prog fdecl es
Rule 3     prog -> <empty>
Rule 4     es -> es es
Rule 5     es -> ES
Rule 6     line -> sent
Rule 7     line -> logic
Rule 8     line -> fcall
Rule 9     line -> group
Rule 10    line -> decl
Rule 11    line -> cdecl
Rule 12    line -> <empty>
Rule 13    sent -> ID EQ expr
Rule 14    sent -> EXTEND1 ID expr
Rule 15    sent -> EXTEND2 ID expr expr
Rule 16    sent -> expr
Rule 17    sent -> UNDO
Rule 18    group -> FOPEN lines line FCLOSE
Rule 19    group -> FOPEN lines FCLOSE
Rule 20    lines -> lines line es
Rule 21    lines -> <empty>
Rule 22    decl -> 2ldecl
Rule 23    decl -> 2adecl
Rule 24    decl -> 1ldecl
Rule 25    decl -> 1adecl
Rule 26    decl -> lvdecl
Rule 27    decl -> avdecl
Rule 28    cdecl -> cldecl
Rule 29    cdecl -> cadecl
Rule 30    cldecl -> CLVAR ID EQ expr
Rule 31    cadecl -> CAVAR ID EQ expr
Rule 32    lvdecl -> LVAR ID
Rule 33    lvdecl -> LVAR ID EQ expr
Rule 34    avdecl -> AVAR ID
Rule 35    avdecl -> AVAR ID EQ expr
Rule 36    1ldecl -> L1ARR ID
Rule 37    1ldecl -> L1ARR ID EQ SOPEN vals SCLOSE
Rule 38    1adecl -> A1ARR ID
Rule 39    1adecl -> A1ARR ID EQ SOPEN vals SCLOSE
Rule 40    2ldecl -> L2ARR ID
Rule 41    2ldecl -> L2ARR ID EQ SOPEN arrs SCLOSE
Rule 42    2adecl -> A2ARR ID
Rule 43    2adecl -> A2ARR ID EQ SOPEN arrs SCLOSE
Rule 44    vals -> expr COMA vals
Rule 45    vals -> expr
Rule 46    arrs -> vals COMD arrs
Rule 47    arrs -> COMD arrs
Rule 48    arrs -> vals
Rule 49    arrs -> <empty>
Rule 50    fdecl -> fovars FUNCTION ID fivars group
Rule 51    fovars -> ID EQ expr
Rule 52    fovars -> SOPEN fvars SCLOSE
Rule 53    fivars -> OPEN fvars CLOSE
Rule 54    fvars -> ID EQ expr
Rule 55    fvars -> ID EQ expr COMA fvars
Rule 56    fvars -> <empty>
Rule 57    expr -> oper
Rule 58    expr -> ACONST
Rule 59    expr -> LCONST
Rule 60    expr -> ID
Rule 61    expr -> INCDEC ID
Rule 62    expr -> NOT expr
Rule 63    expr -> expr GTLT expr
Rule 64    expr -> expr OR expr
Rule 65    expr -> OPEN expr CLOSE
Rule 66    oper -> MOVE
Rule 67    oper -> GET
Rule 68    oper -> PUSH
Rule 69    oper -> SIZE1 ID
Rule 70    oper -> SIZE2 ID expr
Rule 71    oper -> ID OPEN expr COMA expr CLOSE
Rule 72    oper -> ID OPEN expr CLOSE
Rule 73    logic -> cond
Rule 74    logic -> loop
Rule 75    cond -> IF expr sent else
Rule 76    cond -> IF expr group else
Rule 77    else -> ELSE sent
Rule 78    else -> ELSE group
Rule 79    else -> <empty>
Rule 80    loop -> WHILE expr DO sent
Rule 81    loop -> WHILE expr DO group
Rule 82    fcall -> SOPEN vars SCLOSE EQ ID OPEN pars CLOSE
Rule 83    vars -> ID COMA vars
Rule 84    vars -> COMA vars
Rule 85    vars -> ID
Rule 86    vars -> <empty>
Rule 87    pars -> expr COMA pars
Rule 88    pars -> COMA pars
Rule 89    pars -> expr
Rule 90    pars -> <empty>

Terminals, with rules where they appear

A1ARR                : 38 39
A2ARR                : 42 43
ACONST               : 58
AVAR                 : 34 35
CAVAR                : 31
CLOSE                : 53 65 71 72 82
CLVAR                : 30
COMA                 : 44 55 71 83 84 87 88
COMD                 : 46 47
DO                   : 80 81
ELSE                 : 77 78
EQ                   : 13 30 31 33 35 37 39 41 43 51 54 55 82
ES                   : 5
EXTEND1              : 14
EXTEND2              : 15
FCLOSE               : 18 19
FOPEN                : 18 19
FUNCTION             : 50
GET                  : 67
GTLT                 : 63
ID                   : 13 14 15 30 31 32 33 34 35 36 37 38 39 40 41 42 43 50 51 54 55 60 61 69 70 71 72 82 83 85
IF                   : 75 76
INCDEC               : 61
L1ARR                : 36 37
L2ARR                : 40 41
LCONST               : 59
LVAR                 : 32 33
MOVE                 : 66
NOT                  : 62
OPEN                 : 53 65 71 72 82
OR                   : 64
PUSH                 : 68
SCLOSE               : 37 39 41 43 52 82
SIZE1                : 69
SIZE2                : 70
SOPEN                : 37 39 41 43 52 82
UNDO                 : 17
WHILE                : 80 81
error                : 

Nonterminals, with rules where they appear

1adecl               : 25
1ldecl               : 24
2adecl               : 23
2ldecl               : 22
arrs                 : 41 43 46 47
avdecl               : 27
cadecl               : 29
cdecl                : 11
cldecl               : 28
cond                 : 73
decl                 : 10
else                 : 75 76
es                   : 1 2 4 4 20
expr                 : 13 14 15 15 16 30 31 33 35 44 45 51 54 55 62 63 63 64 64 65 70 71 71 72 75 76 80 81 87 89
fcall                : 8
fdecl                : 2
fivars               : 50
fovars               : 50
fvars                : 52 53 55
group                : 9 50 76 78 81
line                 : 1 18 20
lines                : 18 19 20
logic                : 7
loop                 : 74
lvdecl               : 26
oper                 : 57
pars                 : 82 87 88
prog                 : 1 2 0
sent                 : 6 75 77 80
vals                 : 37 39 44 46 48
vars                 : 82 83 84

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . prog line es
    (2) prog -> . prog fdecl es
    (3) prog -> .

    ID              reduce using rule 3 (prog -> .)
    EXTEND1         reduce using rule 3 (prog -> .)
    EXTEND2         reduce using rule 3 (prog -> .)
    UNDO            reduce using rule 3 (prog -> .)
    SOPEN           reduce using rule 3 (prog -> .)
    FOPEN           reduce using rule 3 (prog -> .)
    ACONST          reduce using rule 3 (prog -> .)
    LCONST          reduce using rule 3 (prog -> .)
    INCDEC          reduce using rule 3 (prog -> .)
    NOT             reduce using rule 3 (prog -> .)
    OPEN            reduce using rule 3 (prog -> .)
    IF              reduce using rule 3 (prog -> .)
    WHILE           reduce using rule 3 (prog -> .)
    L2ARR           reduce using rule 3 (prog -> .)
    A2ARR           reduce using rule 3 (prog -> .)
    L1ARR           reduce using rule 3 (prog -> .)
    A1ARR           reduce using rule 3 (prog -> .)
    LVAR            reduce using rule 3 (prog -> .)
    AVAR            reduce using rule 3 (prog -> .)
    CLVAR           reduce using rule 3 (prog -> .)
    CAVAR           reduce using rule 3 (prog -> .)
    MOVE            reduce using rule 3 (prog -> .)
    GET             reduce using rule 3 (prog -> .)
    PUSH            reduce using rule 3 (prog -> .)
    SIZE1           reduce using rule 3 (prog -> .)
    SIZE2           reduce using rule 3 (prog -> .)
    $end            reduce using rule 3 (prog -> .)
    ES              reduce using rule 3 (prog -> .)

    prog                           shift and go to state 1

state 1

    (0) S' -> prog .
    (1) prog -> prog . line es
    (2) prog -> prog . fdecl es
    (6) line -> . sent
    (7) line -> . logic
    (8) line -> . fcall
    (9) line -> . group
    (10) line -> . decl
    (11) line -> . cdecl
    (12) line -> .
    (50) fdecl -> . fovars FUNCTION ID fivars group
    (13) sent -> . ID EQ expr
    (14) sent -> . EXTEND1 ID expr
    (15) sent -> . EXTEND2 ID expr expr
    (16) sent -> . expr
    (17) sent -> . UNDO
    (73) logic -> . cond
    (74) logic -> . loop
    (82) fcall -> . SOPEN vars SCLOSE EQ ID OPEN pars CLOSE
    (18) group -> . FOPEN lines line FCLOSE
    (19) group -> . FOPEN lines FCLOSE
    (22) decl -> . 2ldecl
    (23) decl -> . 2adecl
    (24) decl -> . 1ldecl
    (25) decl -> . 1adecl
    (26) decl -> . lvdecl
    (27) decl -> . avdecl
    (28) cdecl -> . cldecl
    (29) cdecl -> . cadecl
    (51) fovars -> . ID EQ expr
    (52) fovars -> . SOPEN fvars SCLOSE
    (57) expr -> . oper
    (58) expr -> . ACONST
    (59) expr -> . LCONST
    (60) expr -> . ID
    (61) expr -> . INCDEC ID
    (62) expr -> . NOT expr
    (63) expr -> . expr GTLT expr
    (64) expr -> . expr OR expr
    (65) expr -> . OPEN expr CLOSE
    (75) cond -> . IF expr sent else
    (76) cond -> . IF expr group else
    (80) loop -> . WHILE expr DO sent
    (81) loop -> . WHILE expr DO group
    (40) 2ldecl -> . L2ARR ID
    (41) 2ldecl -> . L2ARR ID EQ SOPEN arrs SCLOSE
    (42) 2adecl -> . A2ARR ID
    (43) 2adecl -> . A2ARR ID EQ SOPEN arrs SCLOSE
    (36) 1ldecl -> . L1ARR ID
    (37) 1ldecl -> . L1ARR ID EQ SOPEN vals SCLOSE
    (38) 1adecl -> . A1ARR ID
    (39) 1adecl -> . A1ARR ID EQ SOPEN vals SCLOSE
    (32) lvdecl -> . LVAR ID
    (33) lvdecl -> . LVAR ID EQ expr
    (34) avdecl -> . AVAR ID
    (35) avdecl -> . AVAR ID EQ expr
    (30) cldecl -> . CLVAR ID EQ expr
    (31) cadecl -> . CAVAR ID EQ expr
    (66) oper -> . MOVE
    (67) oper -> . GET
    (68) oper -> . PUSH
    (69) oper -> . SIZE1 ID
    (70) oper -> . SIZE2 ID expr
    (71) oper -> . ID OPEN expr COMA expr CLOSE
    (72) oper -> . ID OPEN expr CLOSE

    ES              reduce using rule 12 (line -> .)
    ID              shift and go to state 11
    EXTEND1         shift and go to state 13
    EXTEND2         shift and go to state 14
    UNDO            shift and go to state 15
    SOPEN           shift and go to state 18
    FOPEN           shift and go to state 20
    ACONST          shift and go to state 30
    LCONST          shift and go to state 31
    INCDEC          shift and go to state 32
    NOT             shift and go to state 33
    OPEN            shift and go to state 19
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    L2ARR           shift and go to state 36
    A2ARR           shift and go to state 37
    L1ARR           shift and go to state 38
    A1ARR           shift and go to state 39
    LVAR            shift and go to state 40
    AVAR            shift and go to state 41
    CLVAR           shift and go to state 42
    CAVAR           shift and go to state 43
    MOVE            shift and go to state 44
    GET             shift and go to state 45
    PUSH            shift and go to state 46
    SIZE1           shift and go to state 47
    SIZE2           shift and go to state 48

    line                           shift and go to state 2
    fdecl                          shift and go to state 3
    sent                           shift and go to state 4
    logic                          shift and go to state 5
    fcall                          shift and go to state 6
    group                          shift and go to state 7
    decl                           shift and go to state 8
    cdecl                          shift and go to state 9
    fovars                         shift and go to state 10
    expr                           shift and go to state 12
    cond                           shift and go to state 16
    loop                           shift and go to state 17
    2ldecl                         shift and go to state 21
    2adecl                         shift and go to state 22
    1ldecl                         shift and go to state 23
    1adecl                         shift and go to state 24
    lvdecl                         shift and go to state 25
    avdecl                         shift and go to state 26
    cldecl                         shift and go to state 27
    cadecl                         shift and go to state 28
    oper                           shift and go to state 29

state 2

    (1) prog -> prog line . es
    (4) es -> . es es
    (5) es -> . ES

    ES              shift and go to state 50

    es                             shift and go to state 49

state 3

    (2) prog -> prog fdecl . es
    (4) es -> . es es
    (5) es -> . ES

    ES              shift and go to state 50

    es                             shift and go to state 51

state 4

    (6) line -> sent .

    ES              reduce using rule 6 (line -> sent .)
    FCLOSE          reduce using rule 6 (line -> sent .)


state 5

    (7) line -> logic .

    ES              reduce using rule 7 (line -> logic .)
    FCLOSE          reduce using rule 7 (line -> logic .)


state 6

    (8) line -> fcall .

    ES              reduce using rule 8 (line -> fcall .)
    FCLOSE          reduce using rule 8 (line -> fcall .)


state 7

    (9) line -> group .

    ES              reduce using rule 9 (line -> group .)
    FCLOSE          reduce using rule 9 (line -> group .)


state 8

    (10) line -> decl .

    ES              reduce using rule 10 (line -> decl .)
    FCLOSE          reduce using rule 10 (line -> decl .)


state 9

    (11) line -> cdecl .

    ES              reduce using rule 11 (line -> cdecl .)
    FCLOSE          reduce using rule 11 (line -> cdecl .)


state 10

    (50) fdecl -> fovars . FUNCTION ID fivars group

    FUNCTION        shift and go to state 52


state 11

    (13) sent -> ID . EQ expr
    (51) fovars -> ID . EQ expr
    (60) expr -> ID .
    (71) oper -> ID . OPEN expr COMA expr CLOSE
    (72) oper -> ID . OPEN expr CLOSE

    EQ              shift and go to state 53
    GTLT            reduce using rule 60 (expr -> ID .)
    OR              reduce using rule 60 (expr -> ID .)
    ES              reduce using rule 60 (expr -> ID .)
    OPEN            shift and go to state 54


state 12

    (16) sent -> expr .
    (63) expr -> expr . GTLT expr
    (64) expr -> expr . OR expr

    ES              reduce using rule 16 (sent -> expr .)
    FCLOSE          reduce using rule 16 (sent -> expr .)
    ELSE            reduce using rule 16 (sent -> expr .)
    GTLT            shift and go to state 55
    OR              shift and go to state 56


state 13

    (14) sent -> EXTEND1 . ID expr

    ID              shift and go to state 57


state 14

    (15) sent -> EXTEND2 . ID expr expr

    ID              shift and go to state 58


state 15

    (17) sent -> UNDO .

    ES              reduce using rule 17 (sent -> UNDO .)
    FCLOSE          reduce using rule 17 (sent -> UNDO .)
    ELSE            reduce using rule 17 (sent -> UNDO .)


state 16

    (73) logic -> cond .

    ES              reduce using rule 73 (logic -> cond .)
    FCLOSE          reduce using rule 73 (logic -> cond .)


state 17

    (74) logic -> loop .

    ES              reduce using rule 74 (logic -> loop .)
    FCLOSE          reduce using rule 74 (logic -> loop .)


state 18

    (82) fcall -> SOPEN . vars SCLOSE EQ ID OPEN pars CLOSE
    (52) fovars -> SOPEN . fvars SCLOSE
    (83) vars -> . ID COMA vars
    (84) vars -> . COMA vars
    (85) vars -> . ID
    (86) vars -> .
    (54) fvars -> . ID EQ expr
    (55) fvars -> . ID EQ expr COMA fvars
    (56) fvars -> .

  ! reduce/reduce conflict for SCLOSE resolved using rule 56 (fvars -> .)
    ID              shift and go to state 60
    COMA            shift and go to state 62
    SCLOSE          reduce using rule 56 (fvars -> .)

  ! SCLOSE          [ reduce using rule 86 (vars -> .) ]

    vars                           shift and go to state 59
    fvars                          shift and go to state 61

state 19

    (65) expr -> OPEN . expr CLOSE
    (57) expr -> . oper
    (58) expr -> . ACONST
    (59) expr -> . LCONST
    (60) expr -> . ID
    (61) expr -> . INCDEC ID
    (62) expr -> . NOT expr
    (63) expr -> . expr GTLT expr
    (64) expr -> . expr OR expr
    (65) expr -> . OPEN expr CLOSE
    (66) oper -> . MOVE
    (67) oper -> . GET
    (68) oper -> . PUSH
    (69) oper -> . SIZE1 ID
    (70) oper -> . SIZE2 ID expr
    (71) oper -> . ID OPEN expr COMA expr CLOSE
    (72) oper -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 30
    LCONST          shift and go to state 31
    ID              shift and go to state 64
    INCDEC          shift and go to state 32
    NOT             shift and go to state 33
    OPEN            shift and go to state 19
    MOVE            shift and go to state 44
    GET             shift and go to state 45
    PUSH            shift and go to state 46
    SIZE1           shift and go to state 47
    SIZE2           shift and go to state 48

    expr                           shift and go to state 63
    oper                           shift and go to state 29

state 20

    (18) group -> FOPEN . lines line FCLOSE
    (19) group -> FOPEN . lines FCLOSE
    (20) lines -> . lines line es
    (21) lines -> .

    FCLOSE          reduce using rule 21 (lines -> .)
    ID              reduce using rule 21 (lines -> .)
    EXTEND1         reduce using rule 21 (lines -> .)
    EXTEND2         reduce using rule 21 (lines -> .)
    UNDO            reduce using rule 21 (lines -> .)
    SOPEN           reduce using rule 21 (lines -> .)
    FOPEN           reduce using rule 21 (lines -> .)
    ACONST          reduce using rule 21 (lines -> .)
    LCONST          reduce using rule 21 (lines -> .)
    INCDEC          reduce using rule 21 (lines -> .)
    NOT             reduce using rule 21 (lines -> .)
    OPEN            reduce using rule 21 (lines -> .)
    IF              reduce using rule 21 (lines -> .)
    WHILE           reduce using rule 21 (lines -> .)
    L2ARR           reduce using rule 21 (lines -> .)
    A2ARR           reduce using rule 21 (lines -> .)
    L1ARR           reduce using rule 21 (lines -> .)
    A1ARR           reduce using rule 21 (lines -> .)
    LVAR            reduce using rule 21 (lines -> .)
    AVAR            reduce using rule 21 (lines -> .)
    CLVAR           reduce using rule 21 (lines -> .)
    CAVAR           reduce using rule 21 (lines -> .)
    MOVE            reduce using rule 21 (lines -> .)
    GET             reduce using rule 21 (lines -> .)
    PUSH            reduce using rule 21 (lines -> .)
    SIZE1           reduce using rule 21 (lines -> .)
    SIZE2           reduce using rule 21 (lines -> .)
    ES              reduce using rule 21 (lines -> .)

    lines                          shift and go to state 65

state 21

    (22) decl -> 2ldecl .

    ES              reduce using rule 22 (decl -> 2ldecl .)
    FCLOSE          reduce using rule 22 (decl -> 2ldecl .)


state 22

    (23) decl -> 2adecl .

    ES              reduce using rule 23 (decl -> 2adecl .)
    FCLOSE          reduce using rule 23 (decl -> 2adecl .)


state 23

    (24) decl -> 1ldecl .

    ES              reduce using rule 24 (decl -> 1ldecl .)
    FCLOSE          reduce using rule 24 (decl -> 1ldecl .)


state 24

    (25) decl -> 1adecl .

    ES              reduce using rule 25 (decl -> 1adecl .)
    FCLOSE          reduce using rule 25 (decl -> 1adecl .)


state 25

    (26) decl -> lvdecl .

    ES              reduce using rule 26 (decl -> lvdecl .)
    FCLOSE          reduce using rule 26 (decl -> lvdecl .)


state 26

    (27) decl -> avdecl .

    ES              reduce using rule 27 (decl -> avdecl .)
    FCLOSE          reduce using rule 27 (decl -> avdecl .)


state 27

    (28) cdecl -> cldecl .

    ES              reduce using rule 28 (cdecl -> cldecl .)
    FCLOSE          reduce using rule 28 (cdecl -> cldecl .)


state 28

    (29) cdecl -> cadecl .

    ES              reduce using rule 29 (cdecl -> cadecl .)
    FCLOSE          reduce using rule 29 (cdecl -> cadecl .)


state 29

    (57) expr -> oper .

    GTLT            reduce using rule 57 (expr -> oper .)
    OR              reduce using rule 57 (expr -> oper .)
    ES              reduce using rule 57 (expr -> oper .)
    CLOSE           reduce using rule 57 (expr -> oper .)
    ID              reduce using rule 57 (expr -> oper .)
    EXTEND1         reduce using rule 57 (expr -> oper .)
    EXTEND2         reduce using rule 57 (expr -> oper .)
    UNDO            reduce using rule 57 (expr -> oper .)
    FOPEN           reduce using rule 57 (expr -> oper .)
    ACONST          reduce using rule 57 (expr -> oper .)
    LCONST          reduce using rule 57 (expr -> oper .)
    INCDEC          reduce using rule 57 (expr -> oper .)
    NOT             reduce using rule 57 (expr -> oper .)
    OPEN            reduce using rule 57 (expr -> oper .)
    MOVE            reduce using rule 57 (expr -> oper .)
    GET             reduce using rule 57 (expr -> oper .)
    PUSH            reduce using rule 57 (expr -> oper .)
    SIZE1           reduce using rule 57 (expr -> oper .)
    SIZE2           reduce using rule 57 (expr -> oper .)
    DO              reduce using rule 57 (expr -> oper .)
    FUNCTION        reduce using rule 57 (expr -> oper .)
    COMA            reduce using rule 57 (expr -> oper .)
    FCLOSE          reduce using rule 57 (expr -> oper .)
    ELSE            reduce using rule 57 (expr -> oper .)
    SCLOSE          reduce using rule 57 (expr -> oper .)
    COMD            reduce using rule 57 (expr -> oper .)


state 30

    (58) expr -> ACONST .

    GTLT            reduce using rule 58 (expr -> ACONST .)
    OR              reduce using rule 58 (expr -> ACONST .)
    ES              reduce using rule 58 (expr -> ACONST .)
    CLOSE           reduce using rule 58 (expr -> ACONST .)
    ID              reduce using rule 58 (expr -> ACONST .)
    EXTEND1         reduce using rule 58 (expr -> ACONST .)
    EXTEND2         reduce using rule 58 (expr -> ACONST .)
    UNDO            reduce using rule 58 (expr -> ACONST .)
    FOPEN           reduce using rule 58 (expr -> ACONST .)
    ACONST          reduce using rule 58 (expr -> ACONST .)
    LCONST          reduce using rule 58 (expr -> ACONST .)
    INCDEC          reduce using rule 58 (expr -> ACONST .)
    NOT             reduce using rule 58 (expr -> ACONST .)
    OPEN            reduce using rule 58 (expr -> ACONST .)
    MOVE            reduce using rule 58 (expr -> ACONST .)
    GET             reduce using rule 58 (expr -> ACONST .)
    PUSH            reduce using rule 58 (expr -> ACONST .)
    SIZE1           reduce using rule 58 (expr -> ACONST .)
    SIZE2           reduce using rule 58 (expr -> ACONST .)
    DO              reduce using rule 58 (expr -> ACONST .)
    FUNCTION        reduce using rule 58 (expr -> ACONST .)
    COMA            reduce using rule 58 (expr -> ACONST .)
    FCLOSE          reduce using rule 58 (expr -> ACONST .)
    ELSE            reduce using rule 58 (expr -> ACONST .)
    SCLOSE          reduce using rule 58 (expr -> ACONST .)
    COMD            reduce using rule 58 (expr -> ACONST .)


state 31

    (59) expr -> LCONST .

    GTLT            reduce using rule 59 (expr -> LCONST .)
    OR              reduce using rule 59 (expr -> LCONST .)
    ES              reduce using rule 59 (expr -> LCONST .)
    CLOSE           reduce using rule 59 (expr -> LCONST .)
    ID              reduce using rule 59 (expr -> LCONST .)
    EXTEND1         reduce using rule 59 (expr -> LCONST .)
    EXTEND2         reduce using rule 59 (expr -> LCONST .)
    UNDO            reduce using rule 59 (expr -> LCONST .)
    FOPEN           reduce using rule 59 (expr -> LCONST .)
    ACONST          reduce using rule 59 (expr -> LCONST .)
    LCONST          reduce using rule 59 (expr -> LCONST .)
    INCDEC          reduce using rule 59 (expr -> LCONST .)
    NOT             reduce using rule 59 (expr -> LCONST .)
    OPEN            reduce using rule 59 (expr -> LCONST .)
    MOVE            reduce using rule 59 (expr -> LCONST .)
    GET             reduce using rule 59 (expr -> LCONST .)
    PUSH            reduce using rule 59 (expr -> LCONST .)
    SIZE1           reduce using rule 59 (expr -> LCONST .)
    SIZE2           reduce using rule 59 (expr -> LCONST .)
    DO              reduce using rule 59 (expr -> LCONST .)
    FUNCTION        reduce using rule 59 (expr -> LCONST .)
    COMA            reduce using rule 59 (expr -> LCONST .)
    FCLOSE          reduce using rule 59 (expr -> LCONST .)
    ELSE            reduce using rule 59 (expr -> LCONST .)
    SCLOSE          reduce using rule 59 (expr -> LCONST .)
    COMD            reduce using rule 59 (expr -> LCONST .)


state 32

    (61) expr -> INCDEC . ID

    ID              shift and go to state 66


state 33

    (62) expr -> NOT . expr
    (57) expr -> . oper
    (58) expr -> . ACONST
    (59) expr -> . LCONST
    (60) expr -> . ID
    (61) expr -> . INCDEC ID
    (62) expr -> . NOT expr
    (63) expr -> . expr GTLT expr
    (64) expr -> . expr OR expr
    (65) expr -> . OPEN expr CLOSE
    (66) oper -> . MOVE
    (67) oper -> . GET
    (68) oper -> . PUSH
    (69) oper -> . SIZE1 ID
    (70) oper -> . SIZE2 ID expr
    (71) oper -> . ID OPEN expr COMA expr CLOSE
    (72) oper -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 30
    LCONST          shift and go to state 31
    ID              shift and go to state 64
    INCDEC          shift and go to state 32
    NOT             shift and go to state 33
    OPEN            shift and go to state 19
    MOVE            shift and go to state 44
    GET             shift and go to state 45
    PUSH            shift and go to state 46
    SIZE1           shift and go to state 47
    SIZE2           shift and go to state 48

    expr                           shift and go to state 67
    oper                           shift and go to state 29

state 34

    (75) cond -> IF . expr sent else
    (76) cond -> IF . expr group else
    (57) expr -> . oper
    (58) expr -> . ACONST
    (59) expr -> . LCONST
    (60) expr -> . ID
    (61) expr -> . INCDEC ID
    (62) expr -> . NOT expr
    (63) expr -> . expr GTLT expr
    (64) expr -> . expr OR expr
    (65) expr -> . OPEN expr CLOSE
    (66) oper -> . MOVE
    (67) oper -> . GET
    (68) oper -> . PUSH
    (69) oper -> . SIZE1 ID
    (70) oper -> . SIZE2 ID expr
    (71) oper -> . ID OPEN expr COMA expr CLOSE
    (72) oper -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 30
    LCONST          shift and go to state 31
    ID              shift and go to state 64
    INCDEC          shift and go to state 32
    NOT             shift and go to state 33
    OPEN            shift and go to state 19
    MOVE            shift and go to state 44
    GET             shift and go to state 45
    PUSH            shift and go to state 46
    SIZE1           shift and go to state 47
    SIZE2           shift and go to state 48

    expr                           shift and go to state 68
    oper                           shift and go to state 29

state 35

    (80) loop -> WHILE . expr DO sent
    (81) loop -> WHILE . expr DO group
    (57) expr -> . oper
    (58) expr -> . ACONST
    (59) expr -> . LCONST
    (60) expr -> . ID
    (61) expr -> . INCDEC ID
    (62) expr -> . NOT expr
    (63) expr -> . expr GTLT expr
    (64) expr -> . expr OR expr
    (65) expr -> . OPEN expr CLOSE
    (66) oper -> . MOVE
    (67) oper -> . GET
    (68) oper -> . PUSH
    (69) oper -> . SIZE1 ID
    (70) oper -> . SIZE2 ID expr
    (71) oper -> . ID OPEN expr COMA expr CLOSE
    (72) oper -> . ID OPEN expr CLOSE

    ACONST          shift and go to state 30
    LCONST          shift and go to state 31
    ID              shift and go to state 64
    INCDEC          shift and go to state 32
    NOT             shift and go to state 33
    OPEN            shift and go to state 19
    MOVE            shift and go to state 44
    GET             shift and go to state 45
    PUSH            shift and go to state 46
    SIZE1           shift and go to state 47
    SIZE2           shift and go to state 48

    expr                           shift and go to state 69
    oper                           shift and go to state 29

state 36

    (40) 2ldecl -> L2ARR . ID
    (41) 2ldecl -> L2ARR . ID EQ SOPEN arrs SCLOSE

    ID              shift and go to state 70


state 37

    (42) 2adecl -> A2ARR . ID
    (43) 2adecl -> A2ARR . ID EQ SOPEN arrs SCLOSE

    ID              shift and go to state 71


state 38

    (36) 1ldecl -> L1ARR . ID
    (37) 1ldecl -> L1ARR . ID EQ SOPEN vals SCLOSE

    ID              shift and go to state 72


state 39

    (38) 1adecl -> A1ARR . ID
    (39) 1adecl -> A1ARR . ID EQ SOPEN vals SCLOSE

    ID              shift and go to state 73


state 40

    (32) lvdecl -> LVAR . ID
    (33) lvdecl -> LVAR . ID EQ expr

    ID              shift and go to state 74


state 41

    (34) avdecl -> AVAR . ID
    (35) avdecl -> AVAR . ID EQ expr

    ID              shift and go to state 75


state 42

    (30) cldecl -> CLVAR . ID EQ expr

    ID              shift and go to state 76


state 43

    (31) cadecl -> CAVAR . ID EQ expr

    ID              shift and go to state 77


state 44

    (66) oper -> MOVE .

    GTLT            reduce using rule 66 (oper -> MOVE .)
    OR              reduce using rule 66 (oper -> MOVE .)
    ES              reduce using rule 66 (oper -> MOVE .)
    CLOSE           reduce using rule 66 (oper -> MOVE .)
    ID              reduce using rule 66 (oper -> MOVE .)
    EXTEND1         reduce using rule 66 (oper -> MOVE .)
    EXTEND2         reduce using rule 66 (oper -> MOVE .)
    UNDO            reduce using rule 66 (oper -> MOVE .)
    FOPEN           reduce using rule 66 (oper -> MOVE .)
    ACONST          reduce using rule 66 (oper -> MOVE .)
    LCONST          reduce using rule 66 (oper -> MOVE .)
    INCDEC          reduce using rule 66 (oper -> MOVE .)
    NOT             reduce using rule 66 (oper -> MOVE .)
    OPEN            reduce using rule 66 (oper -> MOVE .)
    MOVE            reduce using rule 66 (oper -> MOVE .)
    GET             reduce using rule 66 (oper -> MOVE .)
    PUSH            reduce using rule 66 (oper -> MOVE .)
    SIZE1           reduce using rule 66 (oper -> MOVE .)
    SIZE2           reduce using rule 66 (oper -> MOVE .)
    DO              reduce using rule 66 (oper -> MOVE .)
    FUNCTION        reduce using rule 66 (oper -> MOVE .)
    COMA            reduce using rule 66 (oper -> MOVE .)
    FCLOSE          reduce using rule 66 (oper -> MOVE .)
    ELSE            reduce using rule 66 (oper -> MOVE .)
    SCLOSE          reduce using rule 66 (oper -> MOVE .)
    COMD            reduce using rule 66 (oper -> MOVE .)


state 45

    (67) oper -> GET .

    GTLT            reduce using rule 67 (oper -> GET .)
    OR              reduce using rule 67 (oper -> GET .)
    ES              reduce using rule 67 (oper -> GET .)
    CLOSE           reduce using rule 67 (oper -> GET .)
    ID              reduce using rule 67 (oper -> GET .)
    EXTEND1         reduce using rule 67 (oper -> GET .)
    EXTEND2         reduce using rule 67 (oper -> GET .)
    UNDO            reduce using rule 67 (oper -> GET .)
    FOPEN           reduce using rule 67 (oper -> GET .)
    ACONST          reduce using rule 67 (oper -> GET .)
    LCONST          reduce using rule 67 (oper -> GET .)
    INCDEC          reduce using rule 67 (oper -> GET .)
    NOT             reduce using rule 67 (oper -> GET .)
    OPEN            reduce using rule 67 (oper -> GET .)
    MOVE            reduce using rule 67 (oper -> GET .)
    GET             reduce using rule 67 (oper -> GET .)
    PUSH            reduce using rule 67 (oper -> GET .)
    SIZE1           reduce using rule 67 (oper -> GET .)
    SIZE2           reduce using rule 67 (oper -> GET .)
    DO              reduce using rule 67 (oper -> GET .)
    FUNCTION        reduce using rule 67 (oper -> GET .)
    COMA            reduce using rule 67 (oper -> GET .)
    FCLOSE          reduce using rule 67 (oper -> GET .)
    ELSE            reduce using rule 67 (oper -> GET .)
    SCLOSE          reduce using rule 67 (oper -> GET .)
    COMD            reduce using rule 67 (oper -> GET .)


state 46

    (68) oper -> PUSH .
